Logic update 1