@@ -1,39 +1,43 @@
 package com.crypto.exchange.core.service;
 
 import com.crypto.exchange.core.entity.CryptoCurrency;
+import com.crypto.exchange.core.entity.CryptoPriceHistory;
 import com.crypto.exchange.core.repository.CryptoCurrencyRepository;
 import com.crypto.exchange.core.repository.CryptoPriceHistoryRepository;
 import com.crypto.exchange.integration.client.CoinLoreApiClient;
 import com.crypto.exchange.integration.dto.CoinLoreResponseDto;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.anyCollection;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class CryptoInitializerServiceTest {
 
     @Mock
-    private CryptoCurrencyRepository cryptoCurrencyRepository;
+    private CryptoCurrencyRepository cryptoRepository;
 
     @Mock
-    private CryptoPriceHistoryRepository cryptoPriceHistoryRepository;
+    private CryptoPriceHistoryRepository priceHistoryRepository;
 
     @Mock
     private CoinLoreApiClient coinLoreApiClient;
@@ -41,120 +45,144 @@ class CryptoInitializerServiceTest {
     @InjectMocks
     private CryptoInitializerService cryptoInitializerService;
 
-    @Captor
-    private ArgumentCaptor<List<CryptoCurrency>> cryptoListCaptor;
+    private Set<String> targetSymbols;
 
     @BeforeEach
     void setUp() {
-        ReflectionTestUtils.setField(cryptoInitializerService, "targetSymbols", Set.of("BTC"));
+        targetSymbols = Set.of("BTC", "ETH", "USDT");
+        ReflectionTestUtils.setField(cryptoInitializerService, "targetSymbols", targetSymbols);
     }
 
-    @Test
-    @DisplayName("syncPrices успешно создает новую криптовалюту, если её нет в БД")
-    void syncPricesShouldFetchProcessAndSaveSuccessfully() {
-        mockApiSuccess("90", "BTC", "Bitcoin", "65000.50");
-        when(cryptoCurrencyRepository.findAllByExternalIdIn(anyCollection())).thenReturn(Collections.emptyList());
-        when(cryptoCurrencyRepository.findAllBySymbolIn(anyCollection())).thenReturn(Collections.emptyList());
+    @Nested
+    @DisplayName("Тесты методов scheduledPriceUpdate и syncPrices")
+    class SyncPricesTests {
 
-        when(cryptoCurrencyRepository.saveAll(anyCollection())).thenAnswer(invocation -> {
-            List<CryptoCurrency> list = invocation.getArgument(0);
-            list.forEach(c -> ReflectionTestUtils.setField(c, "id", 1L));
-            return list;
-        });
+        @Test
+        void syncPricesShouldDoNothingWhenApiReturnsEmptyOptional() {
+            when(coinLoreApiClient.fetchLatestCryptoPrices()).thenReturn(Optional.empty());
 
-        cryptoInitializerService.syncPrices();
+            cryptoInitializerService.syncPrices();
 
-        CryptoCurrency saved = captureSingleSavedCrypto();
-        assertThat(saved.getSymbol()).isEqualTo("BTC");
-        assertThat(saved.getExternalId()).isEqualTo("90");
-        assertThat(saved.getPriceUsd()).isEqualByComparingTo(new BigDecimal("65000.5000"));
+            verify(cryptoRepository, never()).saveAll(any());
+            verify(priceHistoryRepository, never()).saveAll(any());
+        }
 
-        verify(cryptoPriceHistoryRepository, times(1)).saveAll(anyCollection());
+        @Test
+        void scheduledPriceUpdateShouldTriggerSyncPrices() {
+            when(coinLoreApiClient.fetchLatestCryptoPrices()).thenReturn(Optional.empty());
+
+            cryptoInitializerService.scheduledPriceUpdate();
+
+            verify(coinLoreApiClient).fetchLatestCryptoPrices();
+        }
     }
 
-    @Test
-    @DisplayName("syncPrices не выполняет действий, если API вернул empty")
-    void syncPricesShouldSkipWhenApiReturnsEmpty() {
-        when(coinLoreApiClient.fetchLatestCryptoPrices()).thenReturn(Optional.empty());
+    @Nested
+    @DisplayName("Тесты обработки и сохранения данных (processAndSaveBatch)")
+    class ProcessAndSaveBatchTests {
 
-        cryptoInitializerService.syncPrices();
+        @Test
+        void processAndSaveBatchShouldReturnEarlyWhenNoTargetSymbolsMatch() {
+            var nonTargetData = new CoinLoreResponseDto.CoinLoreCryptoData("999", "DOGE", "Dogecoin", "0.10");
 
-        verify(coinLoreApiClient, times(1)).fetchLatestCryptoPrices();
-        verifyNoInteractions(cryptoCurrencyRepository, cryptoPriceHistoryRepository);
-    }
+            cryptoInitializerService.processAndSaveBatch(List.of(nonTargetData));
 
-    @Test
-    @DisplayName("syncPrices фильтрует монеты, отсутствующие в targetSymbols")
-    void syncPricesShouldFilterOutSymbolsNotInTargetSet() {
-        mockApiSuccess("80", "ETH", "Ethereum", "3000.00");
+            verify(cryptoRepository, never()).findAllByExternalIdIn(any());
+            verify(cryptoRepository, never()).saveAll(any());
+            verify(priceHistoryRepository, never()).saveAll(any());
+        }
 
-        cryptoInitializerService.syncPrices();
+        @Test
+        void processAndSaveBatchShouldCreateNewCryptoWhenNotExists() {
+            var btcApiData = new CoinLoreResponseDto.CoinLoreCryptoData("90", "BTC", "Bitcoin", "65000.12345");
 
-        verify(cryptoCurrencyRepository, never()).saveAll(anyCollection());
-        verify(cryptoPriceHistoryRepository, never()).saveAll(anyCollection());
-    }
+            when(cryptoRepository.findAllByExternalIdIn(Set.of("90"))).thenReturn(Collections.emptyList());
+            when(cryptoRepository.findAllBySymbolIn(Set.of("BTC"))).thenReturn(Collections.emptyList());
 
-    @Test
-    @DisplayName("syncPrices обновляет запись, если сущность найдена по externalId")
-    void syncPricesShouldUpdateExistingCryptoFoundByExternalId() {
-        mockApiSuccess("90", "BTC", "Bitcoin", "70000.00");
-        CryptoCurrency existingCrypto = createCrypto(1L, "90", "BTC", "Bitcoin", "60000.0000");
+            CryptoCurrency savedBtc = CryptoCurrency.builder()
+                    .id(1L)
+                    .externalId("90")
+                    .symbol("BTC")
+                    .name("Bitcoin")
+                    .priceUsd(new BigDecimal("65000.1235"))
+                    .build();
 
-        when(cryptoCurrencyRepository.findAllByExternalIdIn(anyCollection())).thenReturn(List.of(existingCrypto));
-        when(cryptoCurrencyRepository.findAllBySymbolIn(anyCollection())).thenReturn(Collections.emptyList());
-        when(cryptoCurrencyRepository.saveAll(anyCollection())).thenAnswer(invocation -> invocation.getArgument(0));
+            when(cryptoRepository.saveAll(any())).thenReturn(List.of(savedBtc));
 
-        cryptoInitializerService.syncPrices();
+            cryptoInitializerService.processAndSaveBatch(List.of(btcApiData));
 
-        CryptoCurrency saved = captureSingleSavedCrypto();
-        assertThat(saved.getId()).isEqualTo(1L);
-        assertThat(saved.getExternalId()).isEqualTo("90");
-        assertThat(saved.getPriceUsd()).isEqualByComparingTo(new BigDecimal("70000.0000"));
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<List<CryptoCurrency>> cryptoCaptor = ArgumentCaptor.forClass(List.class);
+            verify(cryptoRepository).saveAll(cryptoCaptor.capture());
 
-        verify(cryptoPriceHistoryRepository, times(1)).saveAll(anyCollection());
-    }
+            List<CryptoCurrency> savedList = cryptoCaptor.getValue();
+            assertThat(savedList).hasSize(1);
+            CryptoCurrency newCrypto = savedList.get(0);
 
-    @Test
-    @DisplayName("syncPrices обновляет запись и присваивает externalId, если сущность найдена только по symbol")
-    void syncPricesShouldUpdateExistingCryptoFoundBySymbolWhenExternalIdNotFound() {
-        mockApiSuccess("90", "BTC", "Bitcoin", "72000.00");
-        CryptoCurrency existingCrypto = createCrypto(2L, null, "BTC", "Bitcoin", "65000.0000");
+            assertThat(newCrypto.getExternalId()).isEqualTo("90");
+            assertThat(newCrypto.getSymbol()).isEqualTo("BTC");
+            assertThat(newCrypto.getName()).isEqualTo("Bitcoin");
+            assertThat(newCrypto.getPriceUsd()).isEqualTo(new BigDecimal("65000.1235"));
 
-        when(cryptoCurrencyRepository.findAllByExternalIdIn(anyCollection())).thenReturn(Collections.emptyList());
-        when(cryptoCurrencyRepository.findAllBySymbolIn(anyCollection())).thenReturn(List.of(existingCrypto));
-        when(cryptoCurrencyRepository.saveAll(anyCollection())).thenAnswer(invocation -> invocation.getArgument(0));
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<List<CryptoPriceHistory>> historyCaptor = ArgumentCaptor.forClass(List.class);
+            verify(priceHistoryRepository).saveAll(historyCaptor.capture());
 
-        cryptoInitializerService.syncPrices();
+            List<CryptoPriceHistory> historyList = historyCaptor.getValue();
+            assertThat(historyList).hasSize(1);
+            assertThat(historyList.get(0).getCryptoCurrency()).isEqualTo(savedBtc);
+            assertThat(historyList.get(0).getPriceUsd()).isEqualTo(new BigDecimal("65000.1235"));
+        }
 
-        CryptoCurrency saved = captureSingleSavedCrypto();
-        assertThat(saved.getId()).isEqualTo(2L);
-        assertThat(saved.getExternalId()).isEqualTo("90");
-        assertThat(saved.getPriceUsd()).isEqualByComparingTo(new BigDecimal("72000.0000"));
+        @Test
+        void processAndSaveBatchShouldUpdateExistingCryptoByExternalId() {
+            var ethApiData = new CoinLoreResponseDto.CoinLoreCryptoData("80", "ETH", "Ethereum", "3500.00");
 
-        verify(cryptoPriceHistoryRepository, times(1)).saveAll(anyCollection());
-    }
+            CryptoCurrency existingEth = CryptoCurrency.builder()
+                    .id(2L)
+                    .externalId("80")
+                    .symbol("ETH")
+                    .name("Ethereum")
+                    .priceUsd(new BigDecimal("3000.00"))
+                    .build();
 
-    private void mockApiSuccess(String id, String symbol, String name, String price) {
-        CoinLoreResponseDto.CoinLoreCryptoData apiData =
-                new CoinLoreResponseDto.CoinLoreCryptoData(id, symbol, name, price);
-        CoinLoreResponseDto responseDto = new CoinLoreResponseDto(List.of(apiData));
-        when(coinLoreApiClient.fetchLatestCryptoPrices()).thenReturn(Optional.of(responseDto));
-    }
+            when(cryptoRepository.findAllByExternalIdIn(Set.of("80"))).thenReturn(List.of(existingEth));
+            when(cryptoRepository.findAllBySymbolIn(Set.of("ETH"))).thenReturn(List.of(existingEth));
 
-    private CryptoCurrency createCrypto(Long id, String externalId, String symbol, String name, String priceUsd) {
-        return CryptoCurrency.builder()
-                .id(id)
-                .externalId(externalId)
-                .symbol(symbol)
-                .name(name)
-                .priceUsd(new BigDecimal(priceUsd))
-                .build();
-    }
+            when(cryptoRepository.saveAll(any())).thenReturn(List.of(existingEth));
 
-    private CryptoCurrency captureSingleSavedCrypto() {
-        verify(cryptoCurrencyRepository).saveAll(cryptoListCaptor.capture());
-        List<CryptoCurrency> savedList = cryptoListCaptor.getValue();
-        assertThat(savedList).hasSize(1);
-        return savedList.get(0);
+            cryptoInitializerService.processAndSaveBatch(List.of(ethApiData));
+
+            assertThat(existingEth.getPriceUsd()).isEqualTo(new BigDecimal("3500.0000").setScale(4, RoundingMode.HALF_UP));
+
+            verify(cryptoRepository).saveAll(List.of(existingEth));
+            verify(priceHistoryRepository).saveAll(any());
+        }
+
+        @Test
+        void processAndSaveBatchShouldUpdateExistingCryptoBySymbolWhenExternalIdNotFound() {
+            var usdtApiData = new CoinLoreResponseDto.CoinLoreCryptoData("518", "USDT", "Tether", "1.00");
+
+            CryptoCurrency existingUsdtWithoutExternalId = CryptoCurrency.builder()
+                    .id(3L)
+                    .externalId(null)
+                    .symbol("USDT")
+                    .name("Tether")
+                    .priceUsd(new BigDecimal("0.99"))
+                    .build();
+
+            when(cryptoRepository.findAllByExternalIdIn(Set.of("518"))).thenReturn(Collections.emptyList());
+            when(cryptoRepository.findAllBySymbolIn(Set.of("USDT"))).thenReturn(List.of(existingUsdtWithoutExternalId));
+
+            when(cryptoRepository.saveAll(any())).thenReturn(List.of(existingUsdtWithoutExternalId));
+
+            cryptoInitializerService.processAndSaveBatch(List.of(usdtApiData));
+
+            assertThat(existingUsdtWithoutExternalId.getExternalId()).isEqualTo("518");
+            assertThat(existingUsdtWithoutExternalId.getPriceUsd()).isEqualTo(new BigDecimal("1.0000"));
+
+            verify(cryptoRepository).saveAll(List.of(existingUsdtWithoutExternalId));
+            verify(priceHistoryRepository).saveAll(any());
+        }
     }
 }
